fdo#38545: Show/hide anchor when the anchoring status changes.

Setting a page-anchored object to cell-anchored didn't show the anchor
immediately until you unselect the object and re-select it.  Same for
the cell-anchored to page-anchored direction.

This commit fixes it.